--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,25 +12,25 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$fyle-qbo-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$fyle-xero-app-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$fyle-qbo-app-warn: mat.define-palette(mat.$red-palette);
+$fyle-xero-app-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$fyle-qbo-app-theme: mat.define-light-theme((
+$fyle-xero-app-theme: mat.define-light-theme((
   color: (
-    primary: $fyle-qbo-app-accent,
-    accent: $fyle-qbo-app-accent,
-    warn: $fyle-qbo-app-warn,
+    primary: $fyle-xero-app-accent,
+    accent: $fyle-xero-app-accent,
+    warn: $fyle-xero-app-warn,
   )
 ));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include mat.all-component-themes($fyle-qbo-app-theme);
+@include mat.all-component-themes($fyle-xero-app-theme);
 
 /* You can add global styles to this file, and also import other style files */
 
@@ -674,7 +674,7 @@ th.mat-header-cell:last-of-type {
     width: 244px;
   }
 
-  &--qbo-logo {
+  &--xero-logo {
     margin-right: 21px;
   }
 }
