--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -7,7 +7,7 @@
     <div fxLayout="column" fxLayoutAlign="space-between center">
       <div class="landing--welcome-text">
         <h1 class="landing--welcome-text-header align-center">
-          Welcome to Fyle + Quickbooks Online Integration
+          Welcome to Fyle + Xero Integration
         </h1>
         <h3 class="landing--welcome-text-caption align-center sub-text-color paragraph">
           Save time and effort by automating the seamless transfer of data between Fyle and Quickbooks Online for
@@ -17,7 +17,7 @@
       <div class="landing--qbo-connect-section" (click)="connectQbo()">
         <div fxLayout="row" fxLayoutAlign="center center" class="landing--qbo-connect-button pointer">
           <h3 class="landing--qbo-connect-text bold single-line-text">
-            Connect to Quickbooks Online
+            Connect to Xero
           </h3>
         </div>
       </div>
