typo fix commit

--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -13,7 +13,7 @@
           Save time and effort by automating the seamless transfer of data between Fyle and Xero for accurate accounting.
         </div>
       </div>
-      <div class="landing--xero-connect-section" (click)="connectQbo()">
+      <div class="landing--xero-connect-section" (click)="connectXero()">
         <div fxLayout="row" fxLayoutAlign="center center" class="landing--xero-connect-button pointer">
           <h3 class="landing--xero-connect-text bold single-line-text">
             Connect to Xero Account
