--- a/src/app/shared/components/core/header/header.component.html
+++ b/src/app/shared/components/core/header/header.component.html
@@ -69,9 +69,9 @@
                   <h4 class="profile--state-pill-text align-center">Active</h4>
                 </div>
               </div>
-              <!-- <div class="profile--currency sub-text-color">
-                {{ currency }}
-              </div> -->
+              <div class="profile--currency sub-text-color">
+                {{ currency.fyle_currency }}
+              </div>
             </div>
 
             <div class="profile--divider"></div>
@@ -90,9 +90,9 @@
                   <h4 class="profile--state-pill-text align-center">{{ isXeroConnected ? 'Active': 'Inactive' }}</h4>
                 </div>
               </div>
-              <!-- <div class="profile--currency sub-text-color">
-                {{ currency }}
-              </div> -->
+              <div class="profile--currency sub-text-color">
+                {{ currency.xero_currency }}
+              </div>
             </div>
 
             <div class="profile--divider"></div>
