--- a/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
+++ b/src/app/integration/onboarding/onboarding-landing/onboarding-landing.component.html
@@ -7,7 +7,7 @@
     <div fxLayout="column" fxLayoutAlign="space-between center">
       <div class="landing--welcome-text">
         <div class="landing--welcome-text-header align-center">
-          Welcome to <b>Fyle + Xero Online</b> Integration
+          Welcome to <b>Fyle + Xero</b> Integration
         </div>
         <div class="landing--welcome-text-caption align-center sub-text-color paragraph">
           Save time and effort by automating the seamless transfer of data between Fyle and Xero for accurate accounting.
