--- a/src/app/shared/components/configuration/configuration-step-header-section/configuration-step-header-section.component.html
+++ b/src/app/shared/components/configuration/configuration-step-header-section/configuration-step-header-section.component.html
@@ -5,7 +5,7 @@
         {{ headerText }} <span *ngIf="isStepOptional" class="sub-text-color italic">(Optional)</span>
       </h3>
       <h5 class="sub-text-color paragraph">
-        {{ contentText }}
+        {{ contentText }} <span class="header-section--learn-more-btn pointer" (click)="helperService.openExternalLink(helpArticleLink)">Learn more</span>
       </h5>
       <div *ngIf="activePage === 'import_settings'" class="header-section--info-section">
         <div fxLayout="row" class="header-section--info-content-section">
@@ -16,11 +16,11 @@
         </div>
       </div>
     </div>
-    <div class="header-section--sync-btn" *ngIf="showSyncButton && (activePage === 'export_settings' || activePage === 'import_settings' || activePage === 'advanced_settings')">
+    <!-- <div class="header-section--sync-btn" *ngIf="showSyncButton && (activePage === 'export_settings' || activePage === 'import_settings' || activePage === 'advanced_settings')">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="configuration--back-btn pointer" (click)="refreshXeroDimensions()" matTooltip="Instantly refresh and sync the dimensions from Xero and Fyle" matTooltipPosition="above" matTooltipClass="above">
         <img src="assets/images/svgs/actions/sync.svg" class="btn-cta-text-with-icon" />
         <h5 class="btn-icon align-center">Sync</h5>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
