onboarding advanced setting module commit

--- a/src/app/shared/components/configuration/import-settings/import-settings.component.html
+++ b/src/app/shared/components/configuration/import-settings/import-settings.component.html
@@ -48,7 +48,7 @@
               </div>
               <div class="configuration--input-toggle-section">
                 <mat-slide-toggle class="configuration--toggle-form-field" color="accent"
-                  [disabled]="expenseFields.value.disable_import_to_fyle" formControlName="import_to_fyle">
+                  [disabled]="expenseFields.value.disable_import_to_fyle">
                 </mat-slide-toggle>
               </div>
             </div>
