--- a/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
+++ b/src/app/shared/components/configuration/advanced-settings/advanced-settings.component.html
@@ -6,53 +6,56 @@
       [phase]="isOnboarding ? ProgressPhase.ONBOARDING : ProgressPhase.POST_ONBOARDING">
     </app-configuration-step-header-section>
     <form [formGroup]="advancedSettingsForm">
+
+      <app-configuration-toggle-field [form]="advancedSettingsForm"
+        [iconPath]="'assets/images/svgs/general/expense.svg'" [label]="'Auto create Contacts'"
+        [subLabel]="'While exporting reimbursable expenses from Fyle, the integration will automatically create a Contact if a match does not exist in Xero already.'"
+        [formControllerName]="'autoCreateVendors'">
+      </app-configuration-toggle-field>
+
+      <app-configuration-select-field [form]="advancedSettingsForm"
+        [options]="paymentSyncOptions" [iconPath]="'assets/images/svgs/actions/sync.svg'"
+        [label]="'Auto - Sync payment between Fyle and Xero'"
+        [subLabel]="'When expense is marked paid in Fyle the transaction in Xero will be automatically be updated to Paid and vice versa.'"
+        [placeholder]="'Select Auto - sync type'"
+        [formControllerName]="'paymentSync'">
+      </app-configuration-select-field>
+      
+      <div *ngIf="advancedSettingsForm.value.paymentSync && advancedSettingsForm.value.paymentSync === 'fyle_to_xero'">
+        <app-configuration-select-field [form]="advancedSettingsForm" [xeroAttributes]="billPaymentAccounts"
+          [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
+          [label]="'To which Payment account should the payment entries be posted?'"
+          [subLabel]="'Once the payment for the reimbursable expense is complete in Fyle, the payment entries will be posted to the selected Payment account in Xero.'"
+          [placeholder]="'Select a Payment Account'" [formControllerName]="'billPaymentAccount'">
+        </app-configuration-select-field>
+      </div>
+
       <app-configuration-toggle-field [form]="advancedSettingsForm"
         [iconPath]="'assets/images/svgs/general/calendar.svg'" [label]="'Schedule automatic export'"
         [subLabel]="'Set up a schedule to frequently automate the export of expenses from Fyle to Xero'"
         [formControllerName]="'exportSchedule'">
       </app-configuration-toggle-field>
-      <div *ngIf="advancedSettingsForm.value.exportSchedule">
-        <app-configuration-select-field [form]="advancedSettingsForm" [options]="frequencyIntervals"
-          [isFieldMandatory]="true" [mandatoryErrorListName]="'frequency'" [label]="'Select frequency of export'"
-          [subLabel]="'Select the frequency at which you want your Automated import-export to happen'"
+      <div *ngIf="advancedSettingsForm.value.exportSchedule" class="advanced-settings--schedule-dropdown">
+        <mat-form-field floatLabel="always" appearance="outline" class="configuration--form-field">
+          <mat-select placeholder="Select Frequency" formControlName="exportScheduleFrequency">
+            <mat-option *ngFor="let option of frequencyIntervals" [value]="option.value">
+              {{ option.label }}
+              <img *ngIf="advancedSettingsForm.value.exportScheduleFrequency === option.value" src="assets/images/svgs/general/tick-pink.svg" class="selected-value-check-mark">
+            </mat-option>
+          </mat-select>
+          <div class="mat-select-arrow-closed"></div>
+        </mat-form-field>
+        <!-- <app-configuration-select-field [form]="advancedSettingsForm" [options]="frequencyIntervals"
           [placeholder]="'Select Frequency'" [formControllerName]="'exportScheduleFrequency'">
-        </app-configuration-select-field>
+        </app-configuration-select-field> -->
       </div>
 
       <div fxLayout="row" fxLayoutAlign="space-between start">
         <div class="advanced-settings--schedule-note-content">
           <h5 class="sub-text-color paragraph">
             NOTE: If you skip enabling the auto-schedule of export, you could still manually export the data from the
-            <span class="bold">Dashboard</span>
+            Dashboard
           </h5>
-        </div>
-      </div>
-
-      <div class="configuration--field-section">
-        <div fxLayout="row" fxLayoutAlign="space-between center">
-          <div fxLayout="row" fxLayoutAlign="space-between start" class="configuration--field-label-section">
-            <img src="assets/images/svgs/general/list.svg" class="configuration--icon">
-            <div class="configuration--field-label-text-section">
-              <div class="configuration--field-header">
-                Set description field in Xero
-              </div>
-              <h5 class="configuration--field-label sub-text-color paragraph">
-                Customize the data set you would like to pass to the description field of Xero while exporting expenses
-                from Fyle
-              </h5>
-            </div>
-          </div>
-        </div>
-
-        <div class="advanced-settings--memo-preview-section">
-          <h5 class="advanced-settings--memo-preview-text sub-text-color">
-            Preview in Xero
-          </h5>
-          <div class="advanced-settings--memo-preview-area">
-            <h5 class="advanced-settings--memo-preview paragraph">
-              {{ memoPreviewText }}
-            </h5>
-          </div>
         </div>
       </div>
 
@@ -62,23 +65,6 @@
         [subLabel]="'If the accounting period in Xero is closed, the expenses from Fyle will be exported with a date stamp of the first day next open accounting period.'"
         [formControllerName]="'changeAccountingPeriod'">
       </app-configuration-toggle-field>
-
-      <app-configuration-select-field *ngIf="showPaymentSyncField()" [form]="advancedSettingsForm"
-        [options]="paymentSyncOptions" [iconPath]="'assets/images/svgs/actions/sync.svg'"
-        [label]="'Auto Sync payment status for reimbursable expenses'"
-        [subLabel]="'When expense is marked paid in Fyle the transaction in Xero will be automatically be updated to Paid and vice versa.'"
-        [placeholder]="'Select how payments should be synced for reimbursable expenses'"
-        [formControllerName]="'paymentSync'">
-      </app-configuration-select-field>
-
-      <div *ngIf="advancedSettingsForm.value.paymentSync && advancedSettingsForm.value.paymentSync === 'fyle_to_xero'">
-        <app-configuration-select-field [form]="advancedSettingsForm" [xeroAttributes]="billPaymentAccounts"
-          [isFieldMandatory]="true" [mandatoryErrorListName]="'payment account'"
-          [label]="'To which Payment account should the payment entries be posted?'"
-          [subLabel]="'Once the payment for the reimbursable expense is complete in Fyle, the payment entries will be posted to the selected Payment account in Xero.'"
-          [placeholder]="'Select a Payment Account'" [formControllerName]="'billPaymentAccount'">
-        </app-configuration-select-field>
-      </div>
 
       <app-configuration-step-footer-section
         [ctaText]="!saveInProgress ? (isOnboarding ? ConfigurationCtaText.SAVE_AND_CONTINUE : ConfigurationCtaText.SAVE) : ConfigurationCtaText.SAVING"
